ops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magi-web
  labels:
    app: magi-web
spec:
  selector:
    app: magi-web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
